fix landing collapse on mobile landscape

--- a/styles/scss/layout/_body.scss
+++ b/styles/scss/layout/_body.scss
@@ -48,7 +48,7 @@ main {
 
 .landing {
     padding-top: 35vh;
-    height: 100vh;
+    min-height: 100vh;
 
     p {
         width: 60%;
